# Flutter-rust-desktop

app/: pubspec.yaml
app/lib/: main.dart
app/lib/components/: navigation_drawer.dart  snack_bar_icon.dart
app/lib/components/atoms/: button.dart  full_width_button.dart  full_width_input.dart  switch_wrapper.dart  text_area.dart
app/lib/features/add_book/: add_book.dart  add_book_state.dart  form.dart
app/lib/features/books/: all_books.dart  books.dart
app/lib/features/home/: books.dart  home.dart
app/lib/features/settings/: settings.dart
app/lib/layouts/: main_layout.dart
app/lib/models/: book.dart
app/lib/network/: api.dart
app/lib/router/: router.dart  router_config.dart  routes.dart
app/lib/state/: books.dart  navigation.dart  router.dart
app/lib/utils/: color_schemes.g.dart  constants.dart  extensions.dart  input_decoration.dart  types.dart  utils.dart
backend/: Cargo.toml
backend/src/: main.rs
backend/src/models/: book.rs
backend/src/routes/: books.rs  index.rs
backend/src/services/: books.rs
backend/src/utils/: error.rs
